# WPP-DENTAL

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.rasa  PRD.md  README.md  SPEC.md  pyproject.toml  pytest.ini  requirements.txt
config/: messages.yaml  plans.yaml  procedure_rules.yaml  settings.yaml
deploy/: start-rasa.sh  start.sh  wpp-dental.service
docs/: ANALISE_SOLUCAO_DEFINITIVA.md  RELATORIO_TECNICO_DESENVOLVIMENTO.md  TECHNICAL_DOCUMENTATION.md  WPP-DENTAL_Documentacao_Tecnica.docx
implatações/: spec.md  task.md
implementações/: README.md
rasa_assistant/: README.md  config.yml  domain.yml  endpoints.yml  flows.yml  requirements.txt
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_admin.py  test_agenda_rules.py  test_agent_scenarios.py  test_appointment_confirmation_service.py  test_appointment_offer_service.py  test_calendar_phone_match.py  test_calendar_rules.py  test_calendar_tool.py  test_cancel_safe.py  test_clean_agent_service.py  test_config.py  test_config_resilience.py  test_config_tool.py  test_confirmation_cron_handoff_impl010.py  test_conversation_context_validation.py  test_conversation_service.py  test_conversation_state_service.py  test_conversation_workflow_service.py  test_database.py  test_dental_crew_langgraph.py  test_intent_classifier.py  test_langgraph_conversation_service.py  test_main_webhook.py  test_messaging_impl009.py  test_messaging_integration_impl009.py  test_orchestrator.py  test_patient_identity.py  test_phone_normalization.py  test_phone_service.py  (+12 more)
(+102 files in other folders)
